2004-02-24  Alan Harder <alan.harder@sun.com> 1.4.3-cvs-b57

	* Bugfix: #598025: Create highlights to match thumbnail size of
	  parent album, don't stretch/compress existing thumbnail to
	  desired size.

	* Bugfix: Copy clicks/keywords/etc to the right AlbumItem when
	  moving photo(s) to an album that has add-to-beginning set.

	* delete_photo: set title to "Delete Album" when deleting an album.

2004-02-24 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b56

	* Fix: _() was not used correct in delete_photo

	* Change: Switched back to former .sh scripts as the 
	          Debian Package Maintainer uses his own version.

2004-02-24  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b55

	* Fixed bug #903434: add_photos_frame.php was not using makeGalleryUrl
	  to generate a URL, which lost the CMS variables.

2004-02-24 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b54

	* Bugfix: #869311 and #802716, fitToWindow did not work correct.
	  Thanks for help and patch to Jay Rossiter.

2004-02-24 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b53

	* Bugfix: Added missing echo for GeekLog Header.

	* Bugfix: Configwizard now runs fine when embedded and Gallery has debian structure.
	  - Introduced function get_GalleryPathes wich defines 3 constants:
	  --- GALLERY_CONFDIR
	  --- GALLERY_SETUPDIR
	  --- GALLERY_BASE
	
	  - A little rewrite of getStyleSheets were necessary.

	* Change: Again a little change in bash Scripts.

2004-02-24  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b52

	* Further fix for bug #881690.  We weren't detecting the album name
	  correctly, and weren't saving the album name field properly after
	  migrating the album name.

2004-02-23  Chris Schwerdt <muti@afterglo.ws> 1.4.3-cvs-b51

	* Fixed Bug #902918: If magic quotes is enabled, gallery remote
	  captions (among a few other things) do not get stripped of quote
	  escapes.

2004-02-23  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.3-cvs-b50
