@@ -1,6 +1,11 @@
+2004-02-24  Alan Harder <alan.harder@sun.com> 1.4.3-cvs-b58
+
+	* Bugfix #470766: Avoid filename conflict between thumbnails of
+	  a movie item and jpeg item with same basename.
+
 2004-02-24  Alan Harder <alan.harder@sun.com> 1.4.3-cvs-b57
 
-	* Bugfix: #598025: Create highlights to match thumbnail size of
+	* Bugfix #598025: Create highlights to match thumbnail size of
 	  parent album, don't stretch/compress existing thumbnail to
 	  desired size.
 
